[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
thiserror = "1.0"
async-stream = "0.3"
futures = "0.3"
clap = { version = "4.3", features = ["derive"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rust_decimal_macros = "1.30"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"